# CHIP_8_Interpreter

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  main.c  sdl_test.c  vcpkg-configuration.json  vcpkg.json
include/: chip8_CPU.h  display.h  logging.h
src/: chip8_CPU.c  display.c  logging.c  sdl_test.c
